vlib/v/checker/tests/const_decl_multi_return_err.vv
fn foo() (int, int, int) {
	return 1, 2, 3
}

const a = foo()

fn main() {
	println('${a}')
}
